--- a/.github/workflows/CI-release.yml
+++ b/.github/workflows/CI-release.yml
@@ -1,5 +1,4 @@
 name: CI + Release
-
 on:
   push:
     branches:
@@ -17,30 +16,29 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
+          
       - name: Install system deps
-        run: |
-          sudo apt update
-          sudo apt install -y libudev-dev
-
+        run: sudo apt update && sudo apt install -y libudev-dev
+        
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
-
-      - name: Install release tools
-        run: |
-          cargo install cargo-release
-          cargo install git-cliff
-
-      - name: Configure git
-        run: |
-          git config user.name "github-actions"
-          git config user.email "github-actions@github.com"
-
-      # Build step (always)
+        with:
+          components: rustfmt, clippy
+          
+      - name: Cache cargo
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          
       - name: Build
         run: cargo build
-
-      # Detect [release] commit
+        
       - name: Check for release
         id: release_check
         run: |
@@ -48,61 +46,59 @@ jobs:
           echo "COMMIT_MSG=$MSG" >> $GITHUB_ENV
           if echo "$MSG" | grep -q "\[release\]"; then
             echo "RELEASE=true" >> $GITHUB_ENV
+            
+            # Determine bump type
+            BUMP=patch
+            if echo "$MSG" | grep -qi "^feat"; then
+              BUMP=minor
+            fi
+            if echo "$MSG" | grep -qi "BREAKING CHANGE"; then
+              BUMP=major
+            fi
+            echo "BUMP=$BUMP" >> $GITHUB_ENV
           else
             echo "RELEASE=false" >> $GITHUB_ENV
           fi
-
-      # Determine bump type
-      - name: Determine version bump
+          
+      - name: Install release tools
         if: env.RELEASE == 'true'
-        id: bump
         run: |
-          MSG="$COMMIT_MSG"
-          BUMP=patch
-          if echo "$MSG" | grep -qi "^feat"; then
-            BUMP=minor
-          fi
-          if echo "$MSG" | grep -qi "BREAKING CHANGE"; then
-            BUMP=major
-          fi
-          echo "BUMP=$BUMP" >> $GITHUB_ENV
-          echo "Bump type: $BUMP"
-
-      # Generate changelog
+          cargo install cargo-release --locked
+          cargo install git-cliff --locked
+          
+      - name: Configure git
+        if: env.RELEASE == 'true'
+        run: |
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+          
       - name: Generate changelog
         if: env.RELEASE == 'true'
         run: |
-          git-cliff -o CHANGELOG.md --tag v$(cargo pkgid | cut -d# -f2 | cut -d: -f2) || true
-
-      # Stage and commit generated files
-      - name: Commit changelog & lockfile
-        if: env.RELEASE == 'true'
-        run: |
+          VERSION=$(cargo pkgid | cut -d# -f2 | cut -d: -f2)
+          git-cliff -o CHANGELOG.md --tag "v$VERSION" || true
           git add CHANGELOG.md Cargo.lock || true
-          git diff --cached --quiet || git commit -m "chore: update changelog and lockfile [skip ci]"
-
-      # Cargo release
+          git diff --cached --quiet || git commit -m "chore: update changelog [skip ci]"
+          
       - name: Cargo release
         if: env.RELEASE == 'true'
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
         run: |
-          echo "Running cargo release $BUMP"
           cargo release $BUMP \
             --no-confirm \
             --execute \
             --push \
-            --tag-name "v{{version}}" \
-            --no-dev-version
-
-      # Build release binary
+            --tag-name "v{{version}}"
+            
       - name: Build release binary
         if: env.RELEASE == 'true'
         run: cargo build --release
-
-      # GitHub Release
+        
       - name: Create GitHub Release
         if: env.RELEASE == 'true'
         uses: softprops/action-gh-release@v2
         with:
           files: target/release/config-2014-naga
+          tag_name: v${{ env.VERSION }}
+          generate_release_notes: true
