--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,13 +2,13 @@
 name = "config-2014-naga"
 version = "0.2.1"
 authors = ["Jeremy-Gstein <jeremy51b5@pm.me>"]
+edition = "2021"
 license = "MIT"
-keywords = ["razer", "naga"]
+keywords = ["razer", "naga", "keybinding", "keymapper", "linux"]
 readme = "README.md"
 repository = "https://github.com/Jeremy-Gstein/config-2014-naga"
 homepage = "https://github.com/Jeremy-Gstein/config-2014-naga"
 description = "2014 razer naga key mapper for linux - a way to configure side buttons 1-12"
-edition = "2021"
 
 [dependencies]
 evdev-rs = "0.2"
